# cosine-similarity

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cosine.py  docker-compose.yml  error_analysis.ipynb  example_use.ipynb  kernel.py  main.ipynb  main_cu.ipynb  requirements.txt  setup.py
.github/workflows/: docker-image.yml  python-package.yml
cpp/: CMakeLists.txt  Dockerfile  cosine.py  data.py  example_use.ipynb  kernel.py  main.cpp  main.ipynb  main_cu.ipynb  meson.build  requirements.txt  runner.ipynb  server.py
cpp/src/: main.cpp
cudams/: __init__.py  cosine.py  data.py  kernel.py  matchms_cosine.py  processor.py  utils.py
cudams/similarity/: CPUParallelCosineGreedy.py  CosineGreedy.py  CudaCosineGreedy.py  CudaFingerprintSimilarity.py  __init__.py  kernels.py  processor.py  spectrum_similarity_functions.py  utils.py  vector_similarity_functions.py
docker/: Dockerfile
notebooks/: README.md  accuracy_vs_match_limit.ipynb  accuracy_vs_number_of_peaks.ipynb  accuracy_vs_spectra_length.ipynb  accuracy_vs_tolerance.ipynb  accuracy_with_defaults.ipynb  compare_yoann_cpu_to_cuda.ipynb  cosine_example_Tornike.ipynb  cusine_cuda_kernel.ipynb  example_use.ipynb  full_run.ipynb  nbutils.py  performance_cupy_sparse.ipynb  performance_mergesort_quicksort.ipynb  performance_sparse.ipynb  performance_sparse_file.ipynb  replicate_instability.ipynb  replicate_raw_spectra_errors.ipynb  scratch.ipynb  tutorial_pesticide.ipynb  vastai_sparse_sample.ipynb
notebooks/accuracy/: accuracy_vs_match_limit.ipynb  (+7 more)
tests/: conftest.py  test_utils.py
(+47 files in other folders)
